--- a/InvoiceApp/InvoiceApp.csproj
+++ b/InvoiceApp/InvoiceApp.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DisableHTML.cs" />
     <Compile Include="Migrations\201510180357103_AddMiddleName.cs" />
     <Compile Include="Migrations\201510180357103_AddMiddleName.Designer.cs">
       <DependentUpon>201510180357103_AddMiddleName.cs</DependentUpon>
@@ -174,10 +175,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\BaseCustomerViewModel.cs" />
-    <Compile Include="ViewModels\BaseInvoiceViewModel.cs" />
-    <Compile Include="ViewModels\InvoiceCreateViewModel.cs" />
-    <Compile Include="ViewModels\InvoiceListViewModel.cs" />
+    <Compile Include="ViewModels\BaseCustomer_ViewModel.cs" />
+    <Compile Include="ViewModels\BaseInvoice_ViewModel.cs" />
+    <Compile Include="ViewModels\Invoice_ViewModel.cs" />
+    <Compile Include="ViewModels\ListInvoices_ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -255,6 +256,7 @@
     <Content Include="Views\Invoices\Details.cshtml" />
     <Content Include="Views\Invoices\Edit.cshtml" />
     <Content Include="Views\Invoices\Index.cshtml" />
+    <Content Include="Views\Invoices\GetSumOfInvoice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
