--- a/InvoiceApp/InvoiceApp.csproj
+++ b/InvoiceApp/InvoiceApp.csproj
@@ -223,7 +223,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\InvoiceCreate.js" />
+    <Content Include="Scripts\Invoicer.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
